--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <title>Интернет-магазин</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://use.fontawesome.com/0e8aea7361.js"></script>
 </head>
 <body>
-<header>
-    <button class="btn-cart" type="button">Cart</button>
-</header>
-<main>
-    <div class="products"></div>
-</main>
-<script src="main.js"></script>
+    <header class="menu padding-site">
+        <ul class="menu-list">
+            <li class="menu-list-item active"><a class="active" href="#">Главная</a></li>
+            <li class="menu-list-item"><a href="#">Каталог</a></li>
+            <li class="menu-list-item"><a href="#">Контакты</a></li>
+        </ul>
+        <button class="btn-cart" type="button"><i class="fa fa-shopping-basket"></i></button>
+    </header>
+    <main class="padding-site">
+        <div class="products"></div>
+        <div class="total"></div>
+    </main>
+    <img src="" alt="">
+    <script src="main.js"></script>
 </body>
-</html>
+</html> 
