--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Интернет-магазин</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://use.fontawesome.com/0e8aea7361.js"></script>
 </head>
 <body>
@@ -20,6 +20,6 @@
         <div class="total"></div>
     </main>
     <img src="" alt="">
-    <script src="main.js"></script>
+    <script src="JS/main.js"></script>
 </body>
 </html> 
