--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Интернет-магазин</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <script src="https://use.fontawesome.com/0e8aea7361.js"></script>
 </head>
 <body>
@@ -17,9 +17,15 @@
     </header>
     <main class="padding-site">
         <div class="products"></div>
-        <div class="total"></div>
     </main>
+    <div class="cart">
+        <div class="overlay"></div>
+        <div class="inner">
+            <div class="items"></div>
+            <div class="total"></div>
+        </div>
+    </div>
     <img src="" alt="">
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html> 
